[package]
name = "terrain"
version = "0.1.0"
authors = ["Krishna Mani <krishnamani314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d={ git="https://github.com/kmani314/kiss3d" } # Fork supports 2^32 face meshes
ncollide3d="0.21"
nalgebra="0.19"
noise="0.5.1"
rand="0.7"
gl="0.6"
